<resources>
    <string name="app_name">Service App</string>
    <string name="Loading">Loading...</string>
    <string name="loginTxt">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_sap_code">Enter SAP Code</string>
    <string name="checkInternetConnection">Please Check Your Internet Connection And Try Again!</string>
    <string name="complaint">Complaints</string>
    <string name="route">Routes</string>
    <string name="unsync">Unsync</string>
    <string name="profile">Profile</string>
    <string name="Location_permission">Location access required</string>
    <string name="Location_permission_txt">Please give Soultab Caregiver access to this  device\'s location to get your current location</string>
    <string name="cancel_text">Cancel</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search...</string>
    <string name="noCompAvailable">No Complaint Available</string>
    <string name="complaint_no">Complaint No.</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="pending_days">"Pending Days "</string>
    <string name="materialCode">Material Code</string>
    <string name="serialNo">SerialNo</string>
    <string name="billNo">Bill No.</string>
    <string name="billDate">BillDate</string>
    <string name="customerPay">Customer Pay</string>
    <string name="companyPay">Company Pay</string>
    <string name="focAmount">Foc Amount</string>
    <string name="returnByCompany">Return By Company</string>
    <string name="payToFreelancer">Pay To Freelancer</string>
    <string name="pump_serial_number">New Pump Serial Number</string>
    <string name="enter_pump_serial_number">Scan/Enter Pump Serial Number</string>
    <string name="motor_serial_number">New Motor Serial Number</string>
    <string name="enter_motor_serial_number">Scan/Enter Motor Serial Number</string>
    <string name="controller_serial_number">New Controller Serial Number</string>
    <string name="enter_controller_serial_number">Scan/Enter Controller Serial Number</string>
    <string name="MaterialName">Material Name</string>
    <string name="pending_reason">Pending Reason</string>
    <string name="forward_for_approval">Forward For Approval</string>
    <string name="forward_complaint">Forward Complaint</string>
    <string name="complaint_closed">Complaint \nClosed</string>
    <string name="selectCategory">Select Category</string>
    <string name="selectClosureReason">Select Closure Reason</string>
    <string name="selectDefectType">Select Defect Type</string>
    <string name="selectComplaintRelated">"Select Complaint Related "</string>
    <string name="CustomerCommentClosureRemark">Enter Customer Comment / Closure Remark</string>
    <string name="complaintDetail">Complaint Detail</string>
    <string name="select_image">Please Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="display">Display</string>
    <string name="change">Change</string>
    <string name="want_to_perform">What operation do you want to perform?</string>
    <string name="photoGallery">Photo Gallery</string>
    <string name="attechformphoto1">Attach form photo1</string>
    <string name="attechformphoto2">Attach form photo2</string>
    <string name="attechformphoto3">Attach form photo3</string>
    <string name="attechformphoto4">Attach form photo4</string>
    <string name="allow_all_permission">Please allow all the permission</string>
    <string name="scanCorrectValue">Please Scan the correct value</string>
    <string name="scanning_cancelled">Scanning Cancelled Please try again</string>
    <string name="want_to_forward_approval">Are you sure you want to forward this complaint for approval?</string>
    <string name="want_to_forward_person">Are you sure you want to forward this complaint?</string>
    <string name="noTxt">No</string>
    <string name="yesTxt">Yes</string>
    <string name="service_center">Service Center</string>
    <string name="freelancer">Freelancer</string>
    <string name="solar_installer_partner">Solar Installer Partner</string>
    <string name="selectWhichWantForwardComplaint">Please select which you want to forwad the complaint?</string>
    <string name="nodatafound">No Data Found</string>
    <string name="service_center_code">Service Center Code</string>
    <string name="service_center_name">Service Center Name</string>
    <string name="freelancer_code">Freelancer Code</string>
    <string name="freelancer_name">Freelancer Name</string>
    <string name="solar_installer_partner_code">Solar Installer Partner Code</string>
    <string name="solar_installer_partner_name">Solar Installer Partner Name</string>
    <string name="no_service_provider">No Service Provider is available</string>
    <string name="fetch_your_location">We are trying to fetch your Location, Please try again!</string>
    <string name="complaintForward">Complaint Forward</string>
    <string name="selectPendingReason">Select Pending Reason</string>
    <string name="EnterAction">Please enter action</string>
    <string name="followUpDate">Please select follow up date</string>
    <string name="submit">Submit</string>
    <string name="addPendingReason">Add Pending Reason</string>
    <string name="followup_date">FollowUp Date</string>
    <string name="date">Date</string>
    <string name="employee_name">Employee Name</string>
    <string name="remark">Remark</string>
    <string name="addPendingReasonFirst">Please add Pending Reason of Complaint first!</string>
    <string name="pendingReasonList">Pending Reason List</string>
    <string name="viewPhoto">View Photo</string>
    <string name="complaintPhoto">Complaint Photos</string>
    <string name="nophotoavailable">No Photo Available</string>
    <string name="assignRoute">Assign Route:-</string>
    <string name="customerList">Customer List</string>
    <string name="customer_mobile">Customer Mobile</string>
    <string name="addCustFirst">Please Add Customer First!</string>
    <string name="noRouteAvailable">No Route Available</string>
    <string name="selectCustomerType">Select Customer Type</string>
    <string name="selectCustomerClass">Select Customer Class</string>
    <string name="enterCustomerName">Enter Customer Name</string>
    <string name="contactPersonName">Enter Contact Person Name</string>
    <string name="EnterCustomerMobile">Enter Customer Mobile Number</string>
    <string name="EnterCustomerAddress">Enter Customer Address</string>
    <string name="EnterCustomerLanLineNo">Enter Customer Land Line No.</string>
    <string name="EnterCustomerEmailId">Enter Customer Email-Id</string>
    <string name="EnterCustomerAadhar">Enter Customer Aadhar No</string>
    <string name="EnterCustomerPanCard">Enter Customer Pan Card No.</string>
    <string name="EnterCurrentLocation">Enter Current Location</string>
    <string name="EnterPinCode">Enter Pin Code</string>
    <string name="contactPersonNo">Enter Contact Person No.</string>
    <string name="selectCountry">Select Country</string>
    <string name="selectState">Select State</string>
    <string name="selectDistrict">Select District</string>
    <string name="selectTaluka">Select Taluka</string>
    <string name="selectDistributor">Select Distributor</string>
    <string name="selectIntrestType">Select Intrest Type</string>
    <string name="addCustomer">Add Customer</string>
    <string name="history">History</string>
    <string name="site_survey">Site Survey</string>
    <string name="check_out">Check-Out</string>
    <string name="check_in">Check-In</string>
    <string name="want_to_checkout">Are you sure you want to CheckIn?</string>
    <string name="onRoll">ONROLL</string>
    <string name="employee">Employee</string>
    <string name="customerDetails">Customer Details</string>
    <string name="markAttendance">Mark Attendance</string>
    <string name="dsrEntry">DSR Entry</string>
    <string name="localConveyance">Local Conveyance</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="powerdBY">Powerd By:- Shakti Pumps India Limited</string>
    <string name="app_version">App Version:-</string>
    <string name="sureWantToLogout">Are you sure want to logout?</string>
    <string name="clickOnStartBtn">Please click on start button before start your travel</string>
    <string name="start_travel">Start Travel</string>
    <string name="stop_travel">Stop Travel</string>
    <string name="savedTravelData">Saved Travel </string>
    <string name="selectPendingReasonFirst">Please Select Pending Reason First</string>
    <string name="startLatitude">Start Latitude</string>
    <string name="startLongitude">Start Longitude</string>
    <string name="startAddress">StartAddress</string>
    <string name="confirmedTxt">Confirmed</string>
    <string name="start_location_image">Start Location Image</string>
    <string name="endLatitude">End Latitude</string>
    <string name="endLongitude">End Longitude</string>
    <string name="endLocation">End Location</string>
    <string name="endLocImg">End Location Image</string>
    <string name="tripStart">Trip Started</string>
    <string name="sync">Sync</string>
    <string name="enter_travel_mode">Enter Travel Mode</string>
    <string name="endAddress">End Address</string>
    <string name="distance">Distance</string>
    <string name="in_attendance">IN</string>
    <string name="out_attendance">Out</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="attendance_in_time">"Attendance In Time:- "</string>
    <string name="attendance_out_time">"Attendance Out Time:- "</string>
    <string name="selectOperationPerformed">Please Select Performed Operation</string>
    <string name="enterPurpouse">Enter purpose of visit</string>
    <string name="enterOutcomes">Enter outcome of visit</string>
    <string name="travel_mode">Travel mode</string>
    <string name="frontView">Front View Photo</string>
    <string name="innerView">Inner View Photo</string>
    <string name="visitingCardPhoto">Visiting Card Photo</string>
    <string name="ownerPhoto">Owner Photo</string>
    <string name="enterremark">Please enter remark</string>
    <string name="visitHistory">Visit History</string>
    <string name="srv_cntr_t">Service center technician</string>
    <string name="select_login_type">Select login type</string>
    <string name="pls_select_category">Please select category</string>
    <string name="enter_customer_pay">Enter customer pay amount</string>
    <string name="enter_company_pay">Enter company pay amount</string>
    <string name="enter_foc_amt">Enter Foc amount</string>
    <string name="enter_return_company">Enter return by company</string>
    <string name="select_cmp_cat">Select complaint category</string>
    <string name="select_defect_cat">Select defect category</string>
    <string name="select_related_to">Select related to</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="select_all_images">Please select all images</string>
    <string name="pendingReasonAdded">Pending Reason Added successfully</string>
    <string name="somethingWentWrong">SomethingWentWrong</string>
    <string name="verification">Verification</string>
    <string name="verification_code_via_sms">You will get a verification code via sms</string>
    <string name="pls_enter_veri_code">Please enter verification code</string>
    <string name="verify">Verify</string>
    <string name="didnt_recieve_otp">Didn\'t Receive the verification code?</string>
    <string name="resend_otp"> Resend Otp</string>
</resources>