<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.bootomTabs.complaints.complaintForward.activity.ComplaintForwardActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/pullToRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/selectWhichWantForwardComplaint"
                    android:textColor="@color/colorPrimary" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/serviceCenterRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/service_center"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/freelancerRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/freelancer"
                        android:layout_weight="1"/>


                    <RadioButton
                        android:id="@+id/solarInstPartnerRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/solar_installer_partner" />
                </RadioGroup>


                <RelativeLayout
                    android:id="@+id/searchRelative"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/popup_relative">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="text"
                        app:defaultQueryHint="@string/action_search"
                        app:queryHint="@string/action_search" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/noDataFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/nodatafound"
        android:textColor="@color/black"
        android:visibility="gone" />

</RelativeLayout>