<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.OTPVerificationActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@mipmap/phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/verification"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/verification_code_via_sms"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />


        <!-- <EditText
                android:id="@+id/otpEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/blue_border"
                android:hint="@string/pls_enter_veri_code"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:enabled="true"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/pls_enter_veri_code"
            android:textColorHint="@color/colorPrimary">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpExt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:editable="false"
                android:focusable="false"
                android:enabled="false"
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/submitOtpBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"

            android:background="@drawable/rounded_bg_blue"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


        <LinearLayout
            android:id="@+id/resendLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/didnt_recieve_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/resendOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/resend_otp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>