<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.bootomTabs.profile.localconveyance.LocalConveyanceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/clickOnStartBtn"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/startTravelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_left_white"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/startTravelImg"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@mipmap/travel"/>

                <TextView
                    android:id="@+id/startTravelTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_travel"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/gray_color"/>

            <LinearLayout
                android:id="@+id/endTravelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_right_grey"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/stopTravelImg"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@mipmap/travel"/>

                <TextView
                    android:id="@+id/stopTravelTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_travel"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"/>

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/savedTravelData"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorPrimary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedTravelList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>
</RelativeLayout>