<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.bootomTabs.profile.markAttendance.MarkAttendanceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/attendanceInBtn"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/in_attendance"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bg_blue"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:padding="@dimen/_5sdp"/>

                <TextView
                    android:id="@+id/attendanceInTimeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/_10sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/attendanceOutBtn"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/out_attendance"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bg_grey"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:padding="@dimen/_5sdp"/>

                <TextView
                    android:id="@+id/attendanceOutTimeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/_10sdp"/>

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendance_report"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/colorPrimary"/>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendanceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</RelativeLayout>